<resources>
    <string name="app_name">Caculator_demo</string>
    <string name="ac">AC</string>
    <string name="plus_btn">+</string>
    <string name="plus_minus">±</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="eight">8</string>
    <string name="_9">9</string>
    <string name="multiplication">×</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="division">÷</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtraction">-</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="equals">=</string>
</resources>