<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textEquation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/text_input_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintVertical_bias=".95"/>

    <TextView
        android:id="@+id/text_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintVertical_bias=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/all_clear_btn"
                style="@style/Action_gray_btn"
                android:text="@string/ac" />

            <Button
                android:id="@+id/plus_minus_btn"
                android:text="@string/plus_minus"
                style="@style/Action_gray_btn"/>

            <Button
                android:id="@+id/percent_btn"
                style="@style/Action_gray_btn"
                android:text="@string/percent"/>

            <Button
                android:id="@+id/division_btn"
                android:text="@string/division"
                style="@style/Action_orange_btn"/>

        </TableRow>


        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/seven_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_7"/>

            <Button
                android:id="@+id/eight_btn"
                style="@style/Action_gray_btn"
                android:text="@string/eight"/>

            <Button
                android:id="@+id/nine_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_9"/>

            <Button
                android:id="@+id/multiplication_btn"
                style="@style/Action_orange_btn"
                android:text="@string/multiplication"/>

        </TableRow>

        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/four_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_4"/>

            <Button
                android:id="@+id/five_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_5"/>

            <Button
                android:id="@+id/six_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_6"/>

            <Button
                android:id="@+id/plus_btn"
                style="@style/Action_orange_btn"
                android:text="@string/plus_btn"/>

        </TableRow>

        <TableRow android:layout_weight="1">
            <Button
                android:id="@+id/one_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/two_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/three_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_3"/>

            <Button
                android:id="@+id/subtraction_btn"
                style="@style/Action_orange_btn"
                android:text="@string/subtraction"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/zero_btn"
                style="@style/Action_gray_btn"
                android:layout_width="15dp"
                android:layout_weight="2"
                android:text="@string/_0" />

            <Button
                android:id="@+id/point_btn"
                style="@style/Action_gray_btn"
                android:text="@string/_point"/>


            <Button
                android:id="@+id/equals_btn"
                style="@style/Action_orange_btn"
                android:text="@string/equals"/>

        </TableRow>




    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>